[gd_scene load_steps=5 format=2]

[ext_resource path="res://structure/turret/turretBase.png" type="Texture" id=1]
[ext_resource path="res://structure/turret/turretTurret.png" type="Texture" id=2]
[ext_resource path="res://structure/turret/basicTurret.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.25, 4.25 )

[node name="basicTurret" type="StaticBody2D"]
collision_layer = 16
collision_mask = 36
script = ExtResource( 3 )

[node name="TurretBase" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 1, 0 )
hframes = 2

[node name="turret" type="Node2D" parent="."]
position = Vector2( -1, -1 )

[node name="TurretTurret" type="Sprite" parent="turret"]
visible = false
z_index = 2
texture = ExtResource( 2 )
offset = Vector2( 3, -3 )

[node name="muzzle" type="Position2D" parent="turret"]
position = Vector2( 1, -2.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )
disabled = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
rotation = 1.5708
polygon = PoolVector2Array( 0, 0, 10, 0, -10, 0, -100, -150, 100, -150, 10, 0 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
